Changed 'blog_url' header config to 'blog-page', which is also used in the theme config. Still backwards compatible.

--- a/blueprints/partials/blog-bits.yaml
+++ b/blueprints/partials/blog-bits.yaml
@@ -21,7 +21,7 @@ form:
       type: spacer
       title: Configuration
 
-    header.blog_url:
+    header.blog-page:
       type: text
       toggleable: true
       label: Blog Route
