--- a/quark.yaml
+++ b/quark.yaml
@@ -7,6 +7,7 @@ header-dark: false
 header-transparent: false
 sticky-footer: true
 blog-page: '/blog'
+show_breadcrumbs: false
 spectre:
   exp: false
   icons: false
