--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -3,11 +3,11 @@ slug: quark
 type: theme
 version: 2.0.3
 description: New Grav Default Theme
-icon:  microchip
+icon: microchip
 author:
   name: Team Grav
   email: devs@getgrav.org
-  url: http://getgrav.org
+  url: https://getgrav.org
 homepage: https://github.com/getgrav/grav-theme-quark
 demo: https://demo.getgrav.org/onepage-skeleton
 keywords: quark, spectre, theme, core, modern, fast, responsive, html5, css3
